@@ -17,7 +17,6 @@
 package org.apache.solr.handler.component;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.Set;
 import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.response.ResultContext;
@@ -90,7 +89,7 @@ public class ResponseLogComponent extends SearchComponent {
 
     StringBuilder sb = new StringBuilder();
 
-    Set<String> fields = Collections.singleton(schema.getUniqueKeyField().getName());
+    Set<String> fields = Set.of(schema.getUniqueKeyField().getName());
     SolrDocumentFetcher docFetcher = searcher.getDocFetcher();
     for (DocIterator iter = dl.iterator(); iter.hasNext(); ) {
 
@@ -106,7 +105,7 @@ public class ResponseLogComponent extends SearchComponent {
       throws IOException {
 
     StringBuilder sb = new StringBuilder();
-    Set<String> fields = Collections.singleton(schema.getUniqueKeyField().getName());
+    Set<String> fields = Set.of(schema.getUniqueKeyField().getName());
     SolrDocumentFetcher docFetcher = searcher.getDocFetcher();
     for (DocIterator iter = dl.iterator(); iter.hasNext(); ) {
       sb.append(schema.printableUniqueKey(docFetcher.doc(iter.nextDoc(), fields)))
