@@ -26,7 +26,6 @@ import java.net.URI;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -155,8 +154,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
             instanceof HttpJdkSolrClient);
 
     zkBasedCloudSolrClient =
-        new CloudSolrClient.Builder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
+        new CloudSolrClient.Builder(List.of(cluster.getZkServer().getZkAddress()), Optional.empty())
             .build();
     assertTrue(zkBasedCloudSolrClient.getHttpClient() instanceof HttpJettySolrClient);
     assertTrue(
@@ -432,7 +430,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
     // Test Multi-Threaded routed updates for UpdateRequest
     try (CloudSolrClient threadedClient =
         new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
+                List.of(cluster.getZkServer().getZkAddress()), Optional.empty())
             .sendUpdatesOnlyToShardLeaders()
             .withParallelUpdates(true)
             .withDefaultCollection("routing_collection")
@@ -717,7 +715,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
 
     try (CloudSolrClient client =
         new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
+                List.of(cluster.getZkServer().getZkAddress()), Optional.empty())
             .withDefaultCollection("foo")
             .build()) {
       // important to have one replica on each node
@@ -792,7 +790,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
   public void checkCollectionParameters() throws Exception {
     try (CloudSolrClient client =
         new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
+                List.of(cluster.getZkServer().getZkAddress()), Optional.empty())
             .withDefaultCollection("multicollection1")
             .build()) {
 
@@ -912,9 +910,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
   @Test
   public void testShutdown() throws IOException {
     try (CloudSolrClient client =
-        new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(DEAD_HOST_1), Optional.empty())
-            .build()) {
+        new RandomizingCloudSolrClientBuilder(List.of(DEAD_HOST_1), Optional.empty()).build()) {
       try (ZkClientClusterStateProvider zkClientClusterStateProvider =
           ZkClientClusterStateProvider.from(client)) {
         zkClientClusterStateProvider.setZkConnectTimeout(100);
@@ -928,8 +924,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
   public void testWrongZkChrootTest() throws IOException {
     try (CloudSolrClient client =
         new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress() + "/xyz/foo"),
-                Optional.empty())
+                List.of(cluster.getZkServer().getZkAddress() + "/xyz/foo"), Optional.empty())
             .build()) {
       try (ZkClientClusterStateProvider zkClientClusterStateProvider =
           ZkClientClusterStateProvider.from(client)) {
@@ -948,9 +943,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
     String baseUrl = cluster.getJettySolrRunners().get(0).getBaseUrl().toString();
     try (HttpJettySolrClient httpClient = new HttpJettySolrClient.Builder(baseUrl).build()) {
       try (CloudSolrClient cloudClient =
-          new CloudJettySolrClient.Builder(Collections.singletonList(baseUrl))
-              .withHttpClient(httpClient)
-              .build()) {
+          new CloudJettySolrClient.Builder(List.of(baseUrl)).withHttpClient(httpClient).build()) {
         // Verify the CloudJettySolrClient uses the provided HttpJettySolrClient
         assertSame(((CloudJettySolrClient) cloudClient).getHttpClient(), httpClient);
       }
@@ -1064,7 +1057,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
     // NOTE: creating our own CloudSolrClient whose settings we can muck with...
     try (CloudSolrClient stale_client =
         new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
+                List.of(cluster.getZkServer().getZkAddress()), Optional.empty())
             .withParallelUpdates(true)
             .sendDirectUpdatesToAnyShardReplica()
             .withDefaultCollection(COL)
